# smart-soil-analyzer

./: README.md  architecture  assets  docs  pyproject.toml
src/smart_soil_analyzer/: __init__.py  main.py
src/smart_soil_analyzer/config/: settings.py
src/smart_soil_analyzer/domain/: exceptions.py  models.py
src/smart_soil_analyzer/interfaces/: cli.py
src/smart_soil_analyzer/services/: recommendation.py
tests/: test_recommendation.py
